[package]
name = "x509-verify"
version = "0.1.0"
edition = "2021"
description = """
X.509 Verify

Pure Rust library that verifies X.509 signatures based on the OIDs
"""

[dependencies]
const-oid = { version = "0.9.5", default-features = false }
der = { version = "0.7.8", default-features = false, features = ["derive", "oid"] }
signature = { version = "2.1.0", default-features = false, features = ["digest"] }
spki = { version = "0.7.2", default-features = false }

# optional dependencies
md2 = { version = "0.10.2", optional = true, default-features = false, features = ["oid"] }
md-5 = { version = "0.10.6", optional = true, default-features = false, features = ["oid"] }
sha1 = { version = "0.10.6", optional = true, default-features = false, features = ["oid"] }
sha2 = { version = "0.10.8", optional = true, default-features = false, features = ["oid"] }
rsa = { version = "0.9.2", optional = true, default-features = false }
dsa = { version = "0.6.1", optional = true, default-features = false }
ecdsa = { version = "0.16.8", optional = true, default-features = false, features = ["verifying"] }
k256 = { version = "0.13.1", optional = true, default-features = false, features = ["ecdsa"] }
p192 = { version = "0.13.0", optional = true, default-features = false, features = ["ecdsa"] }
p224 = { version = "0.13.2", optional = true, default-features = false, features = ["ecdsa"] }
p256 = { version = "0.13.2", optional = true, default-features = false, features = ["ecdsa"] }
p384 = { version = "0.13.0", optional = true, default-features = false, features = ["ecdsa"] }
x509-cert = { version = "0.2.1", optional = true, default-features = false }

[dev-dependencies]
x509-cert = { version = "0.2.1", default-features = false, features = ["pem"] }

[features]
default = [ "sha2", "rsa", "k256", "p256", "p384" ]
md2 = [ "dep:md2" ]
md5 = [ "dep:md-5" ]
sha1 = [ "dep:sha1" ]
sha2 = [ "dep:sha2" ]
dsa = [ "dep:dsa", "sha1" ]
rsa = [ "dep:rsa" ]
ecc = [ "k256", "p192", "p224", "p256", "p384" ]
k256 = [ "sha2", "dep:ecdsa", "dep:k256" ]
p192 = [ "sha2", "dep:ecdsa", "dep:p192" ]
p224 = [ "sha2", "dep:ecdsa", "dep:p224" ]
p256 = [ "sha2", "dep:ecdsa", "dep:p256" ]
p384 = [ "sha2", "dep:ecdsa", "dep:p384" ]
x509 = [ "dep:x509-cert" ]
all = [ "md2", "md5", "sha1", "sha2", "dsa", "rsa", "ecc", "x509" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
